--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [Crawlers]
 # 抓取视频的关键字 ,分割
-Keywords_english = hot,happy,comedy,funny,beautiful girl
-Keywords_chinese = 小姐姐短视频,搞笑短视频
+Keywords_english = hot
+Keywords_chinese = 小姐姐
 # 是否开启某爬虫抓取
 Tiktok_crawler = True
 Youtube_crawler = True
@@ -9,7 +9,7 @@ Douyin_crawler = True
 # 爬虫发送请求时最大线程数量
 Max_thread = 2
 # # tiktok douyin 关键字搜索视频结果分页数,最多为3(默认最多抓取3页)
-Max_page = 3
+Max_page = 1
 # 是否使用代理(默认不开启,需要运行在境外ip机器上; 开启时需要配置下面代理详情)
 Proxy_switch = False
 # http/https协议都使用以下代理(示例代理不可用, 需要境外ip, 并设下面Use为True)
@@ -35,39 +35,29 @@ Max_upload_time = 180
 [Web_API]
 # API地址, 一般测试环境为0.0.0.0
 Host = 0.0.0.0
-# 指定服务器 server API地址 可为0.0.0.0 也可指定 如:10.41.1.8
-Server_host = 127.0.0.1
 # API默认运行端口
 Port = 5050
 
 [Path]
 # 测试环境 mongodb 地址
 Mongo_host_local = 127.0.0.1
-# 测试环境 mongodb 端口
-Mongo_port_ten = 27017
+
 # 服务器环境 mongodb 地址
 Mongo_host_server = 127.0.0.1
 # 服务器环境 mongodb 端口
 Mongo_port = 27017
-# chrome log 地址
-Chrome_log = /tmp/chrome/
-# 测试环境 视频保存地址 报错截屏地址
-Video_path_windows = E:\\tmp\\douyin_login\\videos\\
-Error_path_windows = E:\\tmp\\douyin_login\\error_pic\\
-Video_path_ten = /data/logs/handling_video/videos/
-Error_path_ten = /data/logs/handling_video/
-# 服务器环境 视频保存地址 报错截屏地址
-Video_path_server = /data/logs/pyvideos/videos/
-Error_path_server = /data/logs/pyvideos/errors/
-# 测试环境 Chrome 浏览器路径
-Chrome_path = start chrome
-# 服务器环境 Chrome 浏览器路径
-Chrome_path_server = /usr/bin/google-chrome
-# 测试环境 web 项目内视频地址
-Web_video_path_windows = E:\\codes\\Handling_Vedio\\static\\videos\\
-Web_video_path = /home/ubuntu/Handling_Vedio/static/videos/
-# 服务器环境 web 项目内视频地址
-Web_video_path_server = /data/code/pyvideos/static/videos/
+
+# chrome log 目录 这里是相对路径 可修改
+Chrome_log = chrome_logs
+
+#  视频保存地址 报错截屏地址 这里是相对路径 可修改
+Video_path = static/videos/
+Error_path = static/errors/
+
+# 谷歌浏览器的版本号 必须
+chrome_version = 119
+
+
 
 
 
