--- a/config.ini
+++ b/config.ini
@@ -48,7 +48,7 @@ Mongo_host_server = 127.0.0.1
 Mongo_port = 27017
 
 # chrome log 目录 这里是相对路径 可修改
-Chrome_log = chrome_logs
+Chrome_log = chrome_logs/
 
 #  视频保存地址 报错截屏地址 这里是相对路径 可修改
 Video_path = static/videos/
