douyin爬虫更新,新增mongodb认证模式,详情见config.ini,tiktok爬虫已失效待恢复

--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,15 @@
 [Crawlers]
 # 抓取视频的关键字 ,分割
-Keywords_english = hot
-Keywords_chinese = 小姐姐
+Keywords_english = new,girls
+Keywords_chinese = 热梗,热点
 # 是否开启某爬虫抓取
-Tiktok_crawler = True
-Youtube_crawler = True
+Tiktok_crawler = False
+Youtube_crawler = False
 Douyin_crawler = True
 # 爬虫发送请求时最大线程数量
-Max_thread = 2
+Max_thread = 1
 # # tiktok douyin 关键字搜索视频结果分页数,最多为3(默认最多抓取3页)
-Max_page = 1
+Max_page = 3
 # 是否使用代理(默认不开启,需要运行在境外ip机器上; 开启时需要配置下面代理详情)
 Proxy_switch = False
 # http/https协议都使用以下代理(示例代理不可用, 需要境外ip, 并设下面Use为True)
@@ -43,9 +43,13 @@ Port = 5050
 Mongo_host_local = 127.0.0.1
 
 # 服务器环境 mongodb 地址
-Mongo_host_server = 127.0.0.1
+Mongo_host_server = 185.212.58.40
 # 服务器环境 mongodb 端口
 Mongo_port = 27017
+
+# mongodb开启了认证(默认为authMechanism方法)
+# Mongo_username = admin
+# Mongo_password = password
 
 # chrome log 目录 这里是相对路径 可修改
 Chrome_log = chrome_logs/
@@ -55,9 +59,4 @@ Video_path = static/videos/
 Error_path = static/errors/
 
 # 谷歌浏览器的版本号 必须
-chrome_version = 119
-
-
-
-
-
+chrome_version = 86
