tiktok搜索爬虫更新, 无水印下载, 需要海外ip支持或者部署在海外服务器

--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@
 Keywords_english = new,girls
 Keywords_chinese = 热梗,热点
 # 是否开启某爬虫抓取
-Tiktok_crawler = False
-Youtube_crawler = False
+Tiktok_crawler = True
+Youtube_crawler = True
 Douyin_crawler = True
 # 爬虫发送请求时最大线程数量
 Max_thread = 1
@@ -43,7 +43,7 @@ Port = 5050
 Mongo_host_local = 127.0.0.1
 
 # 服务器环境 mongodb 地址
-Mongo_host_server = 185.212.58.40
+Mongo_host_server = 127.0.0.1
 # 服务器环境 mongodb 端口
 Mongo_port = 27017
 
